--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.10",
     "daisyui": "^2.25.0",
+    "heroicons": "^2.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0"
