--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "heroicons": "^2.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lineto": "^3.3.0",
     "react-p5": "^1.3.30",
     "react-router-dom": "^6.3.0"
   },
