--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@heroicons/react": "^2.0.10",
     "daisyui": "^2.25.0",
+    "devicon": "^2.15.1",
     "heroicons": "^2.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-lineto": "^3.3.0",
     "react-p5": "^1.3.30",
     "react-router-dom": "^6.3.0"
