adding user mouse event on background plaything

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-lineto": "^3.3.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-use-scroll-direction": "^0.1.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
